welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value length
		if (value == nums(length-1)) {
                                  ^indexOfValue:4: error: not found: value length
			return nums(length -1 ) 
                                    ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for ( k <- 0 to (nums.length-1 ) )  {
                ^